--- a/css/style.css
+++ b/css/style.css
@@ -65,9 +65,10 @@ body {
     height: 50%;
 }
 
-h2 {
+h1 {
     color: var(--dark-blue);
     font-weight: 900;
+    font-size: 24px;
 }
 
 .info p {
