--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100%;
+    height: 90vh;
 }
 
 .card {
@@ -40,7 +40,6 @@ body {
     border-radius: 10px;
     display: flex;
     flex-direction: column;
-    margin-bottom: 40px;
     min-height: 650px;
     min-width: 338px;
     box-shadow: 0px 22px 11px -1px hsla(224, 23%, 55%, 0.15);
@@ -155,6 +154,10 @@ button.cancel {
 button.cancel:hover {
     color: var(--dark-blue);
     cursor: pointer;
+}
+
+.attribution {
+    height: 10vh;
 }
 
 @media screen and (min-width:500px) {
